changes in 1.2.0
    - resolved issue #88 "runPipeline() never calls destroy() on the analysis engines"
    - resolved issue #87 "DocumentAnnotation cannot be used in createTypePriorities(Class...)"
    - resolved issue #85 "Configuring external resources for non-uimaFIT components is too complex"
    - resolved issue #82 "upgrade to Apache UIMA 2.3.1"
    - resolved issue #81 "JCasUtil.selectFollowing doesn't start after the given annotation"
    - resolved issue #78 "Remove findbugs dependency from uimaFIT"
    - resolved issue #77 "Avoid directly instantiating internal UIMA component classes"
    - resolved issue #76 "SimpleNamedResourceManager does not support bindings"
    - resolved issue #75 "Provide means of injecting arbitrary Java objects as external resource in a local deployment"
    - resolved issue #74 "Add a external resource locator using JNDI"
    - resolved issue #73 "ExternalResources loaded through a ExternalResourceLocator should not need to declare "api""
    - resolved issue #66 "Consider removing select*() using type names before 1.2.0"
    - resolved issue #64 "Methods in CasUtil should not be generic"
    - resolved issue #63 "Ability to specify container in terms of begin and end offset"
    - resolved issue #62 "Iteration over FSArray and FSList"
    - resolved issue #60 "Add indexCovering() to replace ContainmentIndex"
    - resolved issue #59 "Unable to use doubles for parameters in the create* factory methods"
    - resolved issue #58 "Support for iterating over FeatureStructures"
    - resolved issue #57 "JCasUtil has various methods that would be nice to have in CasUtil as well"
    - resolved issue #56 "ExternalResourceFactory fails to bind a resource class twice with different parameters"
    - resolved issue #55 "Support for no-op steps in a pipeline"
    - resolved issue #54 "Support creating custom indexes"
    - resolved issue #52 "null pointer exception thrown when AnalysisEngine impl has no package"