@@ -1,4 +1,5 @@
 changes in 1.2.0
+	- resolved issue #98 "Setting parameters on a SharedResourceObject"
     - resolved issue #88 "runPipeline() never calls destroy() on the analysis engines"
     - resolved issue #87 "DocumentAnnotation cannot be used in createTypePriorities(Class...)"
     - resolved issue #85 "Configuring external resources for non-uimaFIT components is too complex"
